[gd_scene load_steps=2 format=3 uid="uid://dr2vm5fliohmq"]

[ext_resource type="Script" path="res://UI/StartMenu.gd" id="1_7kyi1"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7kyi1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -64.0
offset_right = 75.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="Center Container" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/Center Container"]
layout_mode = 2
text = "Void Ascender"

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="StartButton" type="Button" parent="VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 32)
layout_mode = 2
theme_override_constants/outline_size = 0
text = "Start Game"

[node name="SettingsButton" type="Button" parent="VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 32)
layout_mode = 2
theme_override_constants/outline_size = 0
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 32)
layout_mode = 2
theme_override_constants/outline_size = 0
text = "Quit Game"

[connection signal="mouse_entered" from="VBoxContainer/ButtonContainer" to="." method="_on_button_container_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/QuitButton" to="." method="_on_quit_button_pressed"]
